syntax = "proto3";

package service.basic.v1;

import "google/protobuf/timestamp.proto";
import "service/basic/preset_user_status/v1/preset_user_status.proto";
import "service/basic/server/v1/server.proto";
import "service/basic/support/v1/support.proto";
import "service/basic/voip/v1/get_config.proto";

message TimestampRequest {}

message TimestampResponse {
  google.protobuf.Timestamp timestamp = 1;
}

// Get some basic information of server
message GetServerInfoRequest {}

message GetIdRequest {
  string ocid = 1;
}

message GetIdResponse {
  uint64 id = 1;
}

// Some basic service,jwt is not required
service BasicService {
  // Get server timestamp
  rpc Timestamp(TimestampRequest) returns (TimestampResponse);

  // Get server info
  rpc GetServerInfo(GetServerInfoRequest) returns (server.v1.GetServerInfoResponse);

  // Get id from ocid
  rpc GetId(GetIdRequest) returns (GetIdResponse);

  rpc Support(support.v1.SupportRequest) returns (support.v1.SupportResponse);

  rpc GetPresetUserStatus(preset_user_status.v1.GetPresetUserStatusRequest) returns (preset_user_status.v1.GetPresetUserStatusResponse);

  rpc Ping(PingRequest) returns (PingResponse);

  rpc GetVoipConfig(voip.v1.GetVoipConfigRequest) returns (voip.v1.GetVoipConfigResponse);
}

message PingRequest {}

message PingResponse {}
